# Python-Notes

./: .gitignore  basics.py  pyproject.toml  requirements.txt  setup.cfg
src/basics/: basics.py  block_indentation.py  collection_types.py  comments_and_doc_strings.py  comparison_objects.py  conditionals.py  data_types.py  set_ops.py  type_casting.py  types.py  variable_scope.py
src/datetimes/: datetime_basics.py
src/mathematical/: arithmetic.py  bitwise_operations.py
