[metadata]
name = notes
version = 0.0.1
description = Python Notes for Professionals
keywords = notes, Python
Classifiers=
        Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
package_dir =
        =src

[options.packages.find]
where = src
